trunk/Archive2/20/d6dc3749e5439e/output
In file included from /usr/local/include/c++/5.1.0/x86_64-unknown-linux-gnu/bits/c++allocator.h:33:0,
                 from /usr/local/include/c++/5.1.0/bits/allocator.h:46,
                 from /usr/local/include/c++/5.1.0/string:41,
                 from /usr/local/include/c++/5.1.0/bits/locale_classes.h:40,
                 from /usr/local/include/c++/5.1.0/bits/ios_base.h:41,
                 from /usr/local/include/c++/5.1.0/ios:42,
                 from /usr/local/include/c++/5.1.0/ostream:38,
                 from /usr/local/include/c++/5.1.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/5.1.0/ext/new_allocator.h: In instantiation of 'struct __gnu_cxx::new_allocator<const int>':
/usr/local/include/c++/5.1.0/bits/allocator.h:92:11:   required from 'class std::allocator<const int>'
/usr/local/include/c++/5.1.0/bits/alloc_traits.h:88:43:   required from 'struct std::allocator_traits<std::allocator<const int> >'
/usr/local/include/c++/5.1.0/ext/alloc_traits.h:95:10:   required from 'struct __gnu_cxx::__alloc_traits<std::allocator<const int> >'
/usr/local/include/c++/5.1.0/bits/stl_vector.h:75:28:   required from 'struct std::_Vector_base<const int, std::allocator<const int> >'
/usr/local/include/c++/5.1.0/bits/stl_vector.h:214:11:   required from 'class std::vector<const int>'
main.cpp:61:27:   required from here
/usr/local/include/c++/5.1.0/ext/new_allocator.h:93:7: error: 'const _Tp* __gnu_cxx::new_allocator<_Tp>::address(__gnu_cxx::new_allocator<_Tp>::const_reference) const [with _Tp = const int; __gnu_cxx::new_allocator<_Tp>::const_pointer = const int*; __gnu_cxx::new_allocator<_Tp>::const_reference = const int&]' cannot be overloaded
       address(const_reference __x) const _GLIBCXX_NOEXCEPT
       ^
/usr/local/include/c++/5.1.0/ext/new_allocator.h:89:7: error: with '_Tp* __gnu_cxx::new_allocator<_Tp>::address(__gnu_cxx::new_allocator<_Tp>::reference) const [with _Tp = const int; __gnu_cxx::new_allocator<_Tp>::pointer = const int*; __gnu_cxx::new_allocator<_Tp>::reference = const int&]'
       address(reference __x) const _GLIBCXX_NOEXCEPT
       ^
/usr/local/include/c++/5.1.0/ext/new_allocator.h: In instantiation of 'void __gnu_cxx::new_allocator<_Tp>::deallocate(__gnu_cxx::new_allocator<_Tp>::pointer, __gnu_cxx::new_allocator<_Tp>::size_type) [with _Tp = const int; __gnu_cxx::new_allocator<_Tp>::pointer = const int*; __gnu_cxx::new_allocator<_Tp>::size_type = long unsigned int]':
/usr/local/include/c++/5.1.0/bits/alloc_traits.h:386:9:   required from 'static void std::allocator_traits<_Alloc>::deallocate(_Alloc&, std::allocator_traits<_Alloc>::pointer, std::allocator_traits<_Alloc>::size_type) [with _Alloc = std::allocator<const int>; std::allocator_traits<_Alloc>::pointer = const int*; std::allocator_traits<_Alloc>::size_type = long unsigned int]'
/usr/local/include/c++/5.1.0/bits/stl_vector.h:178:19:   required from 'void std::_Vector_base<_Tp, _Alloc>::_M_deallocate(std::_Vector_base<_Tp, _Alloc>::pointer, std::size_t) [with _Tp = const int; _Alloc = std::allocator<const int>; std::_Vector_base<_Tp, _Alloc>::pointer = const int*; std::size_t = long unsigned int]'
/usr/local/include/c++/5.1.0/bits/stl_vector.h:160:22:   required from 'std::_Vector_base<_Tp, _Alloc>::~_Vector_base() [with _Tp = const int; _Alloc = std::allocator<const int>]'
/usr/local/include/c++/5.1.0/bits/stl_vector.h:257:15:   required from 'std::vector<_Tp, _Alloc>::vector() [with _Tp = const int; _Alloc = std::allocator<const int>]'
main.cpp:61:27:   required from here
/usr/local/include/c++/5.1.0/ext/new_allocator.h:110:26: error: invalid conversion from 'const void*' to 'void*' [-fpermissive]
       { ::operator delete(__p); }
                          ^
In file included from /usr/local/include/c++/5.1.0/ext/new_allocator.h:33:0,
                 from /usr/local/include/c++/5.1.0/x86_64-unknown-linux-gnu/bits/c++allocator.h:33,
                 from /usr/local/include/c++/5.1.0/bits/allocator.h:46,
                 from /usr/local/include/c++/5.1.0/string:41,
                 from /usr/local/include/c++/5.1.0/bits/locale_classes.h:40,
                 from /usr/local/include/c++/5.1.0/bits/ios_base.h:41,
                 from /usr/local/include/c++/5.1.0/ios:42,
                 from /usr/local/include/c++/5.1.0/ostream:38,
                 from /usr/local/include/c++/5.1.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/5.1.0/new:115:6: note:   initializing argument 1 of 'void operator delete(void*)'
 void operator delete(void*) _GLIBCXX_USE_NOEXCEPT
      ^
